# DSH-Queries

DSH-Spiegel/src/: Records.hs  Simple.hs
DSH-Wikipedia/: DSH-Wikipedia.cabal  error_message_compiling
DSH-Wikipedia/sql/: populate_super_category_pages.sql
DSH-Wikipedia/src/: Main.hs  NetworkStats.hs  NetworkStatsDay.hs  Records.hs  Wikipedia.hs
